feat(scanner): enhance config management and improve URL validation